V 
* features
- 
* bug fixes
-

V 2.0.0
* features
- Virtual governors
- Settings and help moved to menu
- Statistics tab
- allow frequencies < 400 for minimal frequency
- use powersave_bias 
* bug fixes
-

V 1.6.1
* features
- Greek translation
- 
* bug fixes
- 

V 1.6.0
* features
- Avoid some system calls by handling sanity checks internally 
- Choose app language
- force internal installation otherwise boot start will not work
- run script on profile switch (for power users and non beta now)
* bug fixes
- fix force close on orientation change in capabilities check
- make logging less noisy
- Italian Update

V 1.5.2
* features
- ensure correct frequency and threshold values
* bug fixes
- fix crash

V 1.5.1 
* features
- 
* bug fixes
- fix crash on start

V 1.5.0
* features
- run script on profile switch (beta and for power users)
- call in progress profile (non beta now)
- pulsed service switches (non beta now)
- manually choose a profile
- layout changes
- German translation
* bug fixes
- 
Those last changes where done while my thoughts where in Japan.
Hopefully we will never ever see such a nuclear disaster again!

V 1.4.2
* features
- Added option (in settings) to enable userspace governor
* bug fixes
-

V 1.4.1
* features
- 
* bug fixes
- removed userspace governor
- updated Italian translation
- fix capability check

V 1.4.0
* features
- pulsed service switches (beta)
- Italian translation
* bug fixes
- 

V 1.3.1
* features
- 3G only state
* bug fixes
- Fix user level chooser for small devices

V 1.3.0
* features
- ask for user experience level
- mobiledata connection switch
- call in progress profile (beta)
* bug fixes
- 

V  1.2.3
* features
- reverted to 1.2.1
* bug fixes
-
 
V 1.2.2
* features
- 
* bug fixes
- fix force closes

V 1.2.1
* features
- Additional FAQs
- reorganised setting
* bug fixes
- fixes for force closes and freezes
- fix start on boot (it is now managed be enable profiles)

V 1.2.0
* features