@@ -7,6 +7,7 @@ V
 V 2.0.0
 * features
 - Virtual governors
+- migrate governor settings to virtual governors
 - Settings and help moved to menu
 - Statistics tab
 - allow frequencies < 400 for minimal frequency
